--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,59 @@
     font-size: 10px;
 }
 
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    font-family: sans-serif;
+}
+
+.container {
+    display: grid;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 100px;
+}
+
+.card{
+    width: 325px;
+    height: 125px;
+    background-color: azure;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0px 2px 4ox rgba(0, 0, 0, 2);
+    margin: 20px;
+    min-height: 250px;
+}
+
+.card img{
+    width: 100%;
+    height: auto;
+    
+}
+
+.content {
+    padding: 16px;
+}
+
+.content h3{
+    font-size: 28px;
+    margin-bottom: 8px;
+}
+
+.content p {
+    color: beige;
+    font-size: 15px;
+    line-height: 1.3;
+}
+
+.content .lm, .content .bn {
+    display: inline-block;
+    padding: 8px 16px;
+    background-color: black;
+    text-decoration: none;
+    border-radius: 4px;
+    margin-top: 16px;
+    margin-top: 16px;
+    color: blueviolet;
+}
