--- a/css/styles.css
+++ b/css/styles.css
@@ -19,10 +19,10 @@
 .card{
     width: 325px;
     height: 125px;
-    background-color: azure;
+    background-color: rgb(54, 154, 154);
     border-radius: 8px;
     overflow: hidden;
-    box-shadow: 0px 2px 4ox rgba(0, 0, 0, 2);
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 2);
     margin: 20px;
     min-height: 250px;
 }
@@ -34,7 +34,7 @@
 }
 
 .content {
-    padding: 16px;
+    padding: 16px 16px 0px 16px;
 }
 
 .content h3{
@@ -55,6 +55,12 @@
     text-decoration: none;
     border-radius: 4px;
     margin-top: 16px;
-    margin-top: 16px;
     color: blueviolet;
+}
+
+#cc {
+    color: black;
+    padding-bottom: 0px;
+    padding-top: 10px;
+    font-size: x-small;
 }
