--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,21 @@
-.copy {
-    font-size: 10px;
-}
-
 *{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
     font-family: sans-serif;
+}
+
+/* class */
+
+.card{
+    width: 325px;
+    height: 125px;
+    background-color: rgb(0, 0, 222);
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 2);
+    margin: 20px;
+    min-height: 250px;
 }
 
 .container {
@@ -16,23 +25,6 @@
     margin-top: 100px;
 }
 
-.card{
-    width: 325px;
-    height: 125px;
-    background-color: rgb(54, 154, 154);
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 2);
-    margin: 20px;
-    min-height: 250px;
-}
-
-.card img{
-    width: 100%;
-    height: auto;
-    
-}
-
 .content {
     padding: 16px 16px 0px 16px;
 }
@@ -40,27 +32,42 @@
 .content h3{
     font-size: 28px;
     margin-bottom: 8px;
+    color: #1d5714;
 }
 
 .content p {
-    color: beige;
+    color: #0e8d16;
     font-size: 15px;
     line-height: 1.3;
+
 }
 
 .content .lm, .content .bn {
     display: inline-block;
     padding: 8px 16px;
-    background-color: black;
+    background-color: #c72929;
     text-decoration: none;
     border-radius: 4px;
     margin-top: 16px;
-    color: blueviolet;
+    color: #6d1c1c;
 }
 
+.photo {
+    width: 50%;
+}
+
+/* id */
+
 #cc {
-    color: black;
+    color: #1d5714;
     padding-bottom: 0px;
     padding-top: 10px;
     font-size: x-small;
 }
+
+/* tagss */
+html, footer, .row{
+    background-color: aquamarine;
+}
+
+/* TRouBLe*/
