--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@
 
 .content {
     padding: 16px 16px 0px 16px;
+    background-color: #5cb826;
 }
 
 .content h3{
@@ -40,6 +41,10 @@
     font-size: 15px;
     line-height: 1.3;
 
+}
+
+.computer {
+    height: 100px;
 }
 
 .content .lm, .content .bn {
@@ -62,7 +67,8 @@
     color: #1d5714;
     padding-bottom: 0px;
     padding-top: 10px;
-    font-size: x-small;
+    font-size: small;
+    font-weight: bold;
 }
 
 /* tagss */
@@ -76,4 +82,9 @@ html, footer, .row{
     float: left;
     margin: 0 15px 20px 0;
     /*     T  R   B  L */
+}
+
+#price {
+    font-size: large;
+    font-weight: 900;
 }
