--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,10 @@
     font-family: sans-serif;
 }
 
+body {
+    margin: 0;
+}
+
 /* class */
 
 .backback {
@@ -14,12 +18,12 @@
 .card{
     width: 325px;
     height: 125px;
-    background-color: rgb(0, 0, 222);
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 2);
     margin: 20px;
     min-height: 250px;
+    border-color: rgb(82, 20, 20);
 }
 
 .container {
@@ -27,11 +31,13 @@
     justify-content: center;
     flex-wrap: wrap;
     margin-top: 100px;
+    border-color:rgb(82, 20, 20);
 }
 
 .content {
     padding: 16px 16px 0px 16px;
     background-color: #5cb826;
+    border-color:rgb(82, 20, 20);
 }
 
 .content h3{
@@ -51,10 +57,17 @@
     height: 100px;
 }
 
+.emo {
+    margin-bottom: 100px;
+}
 
 .ftlLeft {
     float: left;
     margin: 0 15px 20px 0;
+}
+
+.icon {
+    height: 45px;
 }
 
 .navbar {
@@ -62,9 +75,10 @@
 }
 
 .navbtn {
-    background-color: #6d1c1c;
+    background-color: #d82222;
     border-radius: 20px;
     margin: 0px 5px 0px 5px;
+    border-color: #4b0d0d;
 }
 
 .photo {
@@ -110,3 +124,5 @@ html, footer, .row{
 }
 
 /* TRouBLe*/
+
+
